Criação da estrutura HTML inicial

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Canva Projetos</title>
 </head>
 <body>
-    
+    <div class="box1">
+        <table class="table1">
+            <tr class="thead">
+                <th>Projetos <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Projetos"></th>
+            </tr>
+            <tr class="tdata">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolor modi tempore molestiae officiis tempora, nemo, doloribus quam assumenda voluptates iusto, corrupti obcaecati. Aperiam amet nobis nisi ea ullam qui?</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
