--- a/index.html
+++ b/index.html
@@ -9,12 +9,98 @@
 <body>
     <div class="box1">
         <table class="table1">
-            <tr class="thead">
-                <th>Projetos <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Projetos"></th>
+            <tr class="thead1">
+                <th>Projetos <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Projetos" class="table-icon"></th>
             </tr>
-            <tr class="tdata">
+            <tr class="tdata1">
                 <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolor modi tempore molestiae officiis tempora, nemo, doloribus quam assumenda voluptates iusto, corrupti obcaecati. Aperiam amet nobis nisi ea ullam qui?</td>
+            </tr>
+            <tr class="tdata1">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="box2">
+        <table class="table2">
+            <tr class="thead2">
+                <th>MVP <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela MVPs" class="table-icon"></th>
+            </tr>
+            <tr class="tdata2">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+            </tr>
+            <tr class="tdata2">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="box3">
+        <table class="table3">
+            <tr class="thead3">
+                <th>Investimento <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Investimentos" class="table-icon"></th>
+            </tr>
+            <tr class="tdata3">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+            </tr>
+            <tr class="tdata3">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="box4">
+        <table class="table4">
+            <tr class="thead4">
+                <th>Equipe <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Equipe" class="table-icon"></th>
+            </tr>
+            <tr class="tdata4">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+            </tr>
+            <tr class="tdata4">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="box5">
+        <table class="table5">
+            <tr class="thead5">
+                <th>Principais entregas <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Principais entregas" class="table-icon"></th>
+            </tr>
+            <tr class="tdata5">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+            </tr>
+            <tr class="tdata5">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="box6">
+        <table class="table6">
+            <tr class="thead6">
+                <th>Resultado esperado <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Resultado esperado" class="table-icon"></th>
+            </tr>
+            <tr class="tdata6">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+            </tr>
+            <tr class="tdata6">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="box7">
+        <table class="table7">
+            <tr class="thead7">
+                <th>Métricas <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Métricas" class="table-icon"></th>
+            </tr>
+            <tr class="tdata7">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+            </tr>
+            <tr class="tdata7">
+                <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
             </tr>
         </table>
     </div>
