Organizando alinhamento das tabelas

--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
             <div class="box1">
                 <table class="table1">
                     <tr class="thead1">
-                        <th>Projetos <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Projetos" class="table-icon"></th>
+                        <th>Projeto <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Projetos" class="table-icon"></th>
                     </tr>
                     <tr class="tdata1">
                         <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
-                    </tr>
-                    <tr class="tdata1">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
                     </tr>
                 </table>
             </div>
@@ -31,9 +28,6 @@
                     <tr class="tdata2">
                         <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
                     </tr>
-                    <tr class="tdata2">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
-                    </tr>
                 </table>
             </div>
 
@@ -45,9 +39,6 @@
                     <tr class="tdata3">
                         <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
                     </tr>
-                    <tr class="tdata3">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
-                    </tr>
                 </table>
             </div>
         </div>
@@ -58,11 +49,32 @@
                     <tr class="thead4">
                         <th>Equipe <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Equipe" class="table-icon"></th>
                     </tr>
-                    <tr class="tdata4">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                    <tr class="thead4-eqp">
+                        <th>Gestor</th>
                     </tr>
                     <tr class="tdata4">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+                        <td>Tadeu</td>
+                    </tr>
+                    <tr class="thead4-eqp">
+                        <th>Especialista</th>
+                    </tr>
+                    <tr class="tdata4">
+                        <td>Zé</td>
+                    </tr>
+                    <tr class="tdata4">
+                        <td>Jão</td>
+                    </tr>
+                    <tr class="thead4-eqp">
+                        <th>Squad</th>
+                    </tr>
+                    <tr class="tdata4">
+                        <td>Maria</td>
+                    </tr>
+                    <tr class="tdata4">
+                        <td>Joaquina</td>
+                    </tr>
+                    <tr class="tdata4">
+                        <td>Cirilo</td>
                     </tr>
                 </table>
             </div>
@@ -74,6 +86,9 @@
                     </tr>
                     <tr class="tdata5">
                         <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                    </tr>
+                    <tr class="tdata5">
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
                     </tr>
                     <tr class="tdata5">
                         <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
@@ -99,7 +114,10 @@
                             <th>Métricas <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Métricas" class="table-icon"></th>
                         </tr>
                         <tr class="tdata7">
-                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error!</td>
+                        </tr>
+                        <tr class="tdata7">
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error!</td>
                         </tr>
                     </table>
                 </div>
