Ajustando informações da tabela de acordo com o modelo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <th>Projeto <img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Projetos" class="table-icon"></th>
                     </tr>
                     <tr class="tdata1">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                        <td>Estabelecer ciclo de otimização de produtividade através de tecnologias corporativas</td>
                     </tr>
                 </table>
             </div>
@@ -26,7 +26,7 @@
                         <th>MVP <img src="https://cdn-icons-png.flaticon.com/128/9238/9238294.png" alt="Icone da tabela MVPs" class="table-icon"></th>
                     </tr>
                     <tr class="tdata2">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                        <td>Implantar procedimentos do Administrar e desenvolver pessoas no módulo RH do TOTVS</td>
                     </tr>
                 </table>
             </div>
@@ -37,7 +37,7 @@
                         <th>Investimento <img src="https://cdn-icons-png.flaticon.com/128/7928/7928255.png" alt="Icone da tabela Investimentos" class="table-icon"></th>
                     </tr>
                     <tr class="tdata3">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                        <td></td>
                     </tr>
                 </table>
             </div>
@@ -85,13 +85,22 @@
                         <th>Principais entregas <img src="https://cdn-icons-png.flaticon.com/128/10801/10801807.png" alt="Icone da tabela Principais entregas" class="table-icon"></th>
                     </tr>
                     <tr class="tdata5">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                        <td>Diagnóstico Detalhado dos Processos em nível de Automatização</td>
                     </tr>
                     <tr class="tdata5">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+                        <td>Identificar as tecnologias corporativas que melhor atendam às necessidades da organização</td>
                     </tr>
                     <tr class="tdata5">
-                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic totam ratione voluptatibus nobis obcaecati laboriosam dolor, harum consectetur aliquam. Magnam, voluptates. Ea libero sed eligendi nulla aliquam, quod dolorum architecto!</td>
+                        <td>Organizar, corrigir e implantar módulos de Backoffice da TOTVS</td>
+                    </tr>
+                    <tr class="tdata5">
+                        <td>Implementação do TOTVS Fluig e Método de Automatização de Processos com BPMS</td>
+                    </tr>
+                    <tr class="tdata5">
+                        <td>Desenvolvimento de Métodos de Otimização da Produtividade de Processos</td>
+                    </tr>
+                    <tr class="tdata5">
+                        <td>Estabelecer processos de Integração de Sistemas</td>
                     </tr>
                 </table>
             </div>
@@ -103,7 +112,10 @@
                             <th>Resultado esperado <img src="https://cdn-icons-png.flaticon.com/128/9797/9797853.png" alt="Icone da tabela Resultado esperado" class="table-icon"></th>
                         </tr>
                         <tr class="tdata6">
-                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error, totam blanditiis tempora explicabo voluptates? Eligendi cumque nemo fugiat esse, nisi tempora!</td>
+                            <td>Avanço na automatização de processos</td>
+                        </tr>
+                        <tr class="tdata6">
+                            <td>Avanço da Criação do repositório de documentos</td>
                         </tr>
                     </table>
                 </div>
@@ -114,10 +126,10 @@
                             <th>Métricas <img src="https://cdn-icons-png.flaticon.com/128/7931/7931125.png" alt="Icone da tabela Métricas" class="table-icon"></th>
                         </tr>
                         <tr class="tdata7">
-                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error!</td>
+                            <td>% Avanço na automatização de processos</td>
                         </tr>
                         <tr class="tdata7">
-                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum ab qui nihil aliquid fugiat dolore doloribus ipsa error!</td>
+                            <td>% de Criação do repositório de documentos</td>
                         </tr>
                     </table>
                 </div>
