Alteração do código para animações

--- a/index.html
+++ b/index.html
@@ -9,129 +9,143 @@
 <body>
     <div class="flex-container">
         <div class="flex-row">
-            <div class="box1">
-                <table class="table1">
-                    <tr class="thead1">
-                        <th>Projeto<img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Projetos" class="table-icon"></th>
-                    </tr>
-                    <tr class="tdata1">
-                        <td>Estabelecer ciclo de otimização de produtividade através de tecnologias corporativas</td>
-                    </tr>
-                </table>
+            <div class="box">
+                <div class="box1">
+                    <table class="table1">
+                        <tr class="thead1">
+                            <th>Projeto<img src="https://cdn-icons-png.flaticon.com/128/10484/10484735.png" alt="Icone da tabela Projetos" class="table-icon"></th>
+                        </tr>
+                        <tr class="tdata1">
+                            <td>Estabelecer ciclo de otimização de produtividade através de tecnologias corporativas</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
 
-            <div class="box2">
-                <table class="table2">
-                    <tr class="thead2">
-                        <th>MVP<img src="https://cdn-icons-png.flaticon.com/128/9238/9238294.png" alt="Icone da tabela MVPs" class="table-icon"></th>
-                    </tr>
-                    <tr class="tdata2">
-                        <td>Implantar procedimentos do Administrar e desenvolver pessoas no módulo RH do TOTVS</td>
-                    </tr>
-                </table>
+            <div class="box">
+                <div class="box2">
+                    <table class="table2">
+                        <tr class="thead2">
+                            <th>MVP<img src="https://cdn-icons-png.flaticon.com/128/9238/9238294.png" alt="Icone da tabela MVPs" class="table-icon"></th>
+                        </tr>
+                        <tr class="tdata2">
+                            <td>Implantar procedimentos do Administrar e desenvolver pessoas no módulo RH do TOTVS</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
 
-            <div class="box3">
-                <table class="table3">
-                    <tr class="thead3">
-                        <th>Investimento<img src="https://cdn-icons-png.flaticon.com/128/7928/7928255.png" alt="Icone da tabela Investimentos" class="table-icon"></th>
-                    </tr>
-                    <tr class="tdata3">
-                        <td>R$120000,00</td>
-                    </tr>
-                </table>
+            <div class="box">
+                <div class="box3">
+                    <table class="table3">
+                        <tr class="thead3">
+                            <th>Investimento<img src="https://cdn-icons-png.flaticon.com/128/7928/7928255.png" alt="Icone da tabela Investimentos" class="table-icon"></th>
+                        </tr>
+                        <tr class="tdata3">
+                            <td>R$120000,00</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
 
         <div class="flex-row">
-            <div class="box4">
-                <table class="table4">
-                    <tr class="thead4">
-                        <th>Equipe<img src="https://cdn-icons-png.flaticon.com/128/5069/5069162.png" alt="Icone da tabela Equipe" class="table-icon"></th>
-                    </tr>
-                    <tr class="thead4-eqp">
-                        <th>Gestor</th>
-                    </tr>
-                    <tr class="tdata4">
-                        <td>Tadeu</td>
-                    </tr>
-                    <tr class="thead4-eqp">
-                        <th>Especialista</th>
-                    </tr>
-                    <tr class="tdata4">
-                        <td>Zé</td>
-                    </tr>
-                    <tr class="tdata4">
-                        <td>Jão</td>
-                    </tr>
-                    <tr class="thead4-eqp">
-                        <th>Squad</th>
-                    </tr>
-                    <tr class="tdata4">
-                        <td>Maria</td>
-                    </tr>
-                    <tr class="tdata4">
-                        <td>Joaquina</td>
-                    </tr>
-                    <tr class="tdata4">
-                        <td>Cirilo</td>
-                    </tr>
-                </table>
-            </div>
-
-            <div class="box5">
-                <table class="table5">
-                    <tr class="thead5">
-                        <th>Principais entregas<img src="https://cdn-icons-png.flaticon.com/128/10801/10801807.png" alt="Icone da tabela Principais entregas" class="table-icon"></th>
-                    </tr>
-                    <tr class="tdata5">
-                        <td>Diagnóstico Detalhado dos Processos em nível de Automatização</td>
-                    </tr>
-                    <tr class="tdata5">
-                        <td>Identificar as tecnologias corporativas que melhor atendam às necessidades da organização</td>
-                    </tr>
-                    <tr class="tdata5">
-                        <td>Organizar, corrigir e implantar módulos de Backoffice da TOTVS</td>
-                    </tr>
-                    <tr class="tdata5">
-                        <td>Implementação do TOTVS Fluig e Método de Automatização de Processos com BPMS</td>
-                    </tr>
-                    <tr class="tdata5">
-                        <td>Desenvolvimento de Métodos de Otimização da Produtividade de Processos</td>
-                    </tr>
-                    <tr class="tdata5">
-                        <td>Estabelecer processos de Integração de Sistemas</td>
-                    </tr>
-                </table>
-            </div>
-
-            <div class="flex-column">
-                <div class="box6">
-                    <table class="table6">
-                        <tr class="thead6">
-                            <th>Resultado esperado<img src="https://cdn-icons-png.flaticon.com/128/9797/9797853.png" alt="Icone da tabela Resultado esperado" class="table-icon"></th>
+            <div class="box">
+                <div class="box4">
+                    <table class="table4">
+                        <tr class="thead4">
+                            <th>Equipe<img src="https://cdn-icons-png.flaticon.com/128/5069/5069162.png" alt="Icone da tabela Equipe" class="table-icon"></th>
                         </tr>
-                        <tr class="tdata6">
-                            <td>Avanço na automatização de processos</td>
+                        <tr class="thead4-eqp">
+                            <th>Gestor</th>
                         </tr>
-                        <tr class="tdata6">
-                            <td>Avanço da Criação do repositório de documentos</td>
+                        <tr class="tdata4">
+                            <td>Tadeu</td>
+                        </tr>
+                        <tr class="thead4-eqp">
+                            <th>Especialista</th>
+                        </tr>
+                        <tr class="tdata4">
+                            <td>Zé</td>
+                        </tr>
+                        <tr class="tdata4">
+                            <td>Jão</td>
+                        </tr>
+                        <tr class="thead4-eqp">
+                            <th>Squad</th>
+                        </tr>
+                        <tr class="tdata4">
+                            <td>Maria</td>
+                        </tr>
+                        <tr class="tdata4">
+                            <td>Joaquina</td>
+                        </tr>
+                        <tr class="tdata4">
+                            <td>Cirilo</td>
                         </tr>
                     </table>
                 </div>
+            </div>
 
-                <div class="box7">
-                    <table class="table7">
-                        <tr class="thead7">
-                            <th>Métricas<img src="https://cdn-icons-png.flaticon.com/128/7931/7931125.png" alt="Icone da tabela Métricas" class="table-icon"></th>
+            <div class="box">
+                <div class="box5">
+                    <table class="table5">
+                        <tr class="thead5">
+                            <th>Principais entregas<img src="https://cdn-icons-png.flaticon.com/128/10801/10801807.png" alt="Icone da tabela Principais entregas" class="table-icon"></th>
                         </tr>
-                        <tr class="tdata7">
-                            <td>% Avanço na automatização de processos</td>
+                        <tr class="tdata5">
+                            <td>Diagnóstico Detalhado dos Processos em nível de Automatização</td>
                         </tr>
-                        <tr class="tdata7">
-                            <td>% de Criação do repositório de documentos</td>
+                        <tr class="tdata5">
+                            <td>Identificar as tecnologias corporativas que melhor atendam às necessidades da organização</td>
+                        </tr>
+                        <tr class="tdata5">
+                            <td>Organizar, corrigir e implantar módulos de Backoffice da TOTVS</td>
+                        </tr>
+                        <tr class="tdata5">
+                            <td>Implementação do TOTVS Fluig e Método de Automatização de Processos com BPMS</td>
+                        </tr>
+                        <tr class="tdata5">
+                            <td>Desenvolvimento de Métodos de Otimização da Produtividade de Processos</td>
+                        </tr>
+                        <tr class="tdata5">
+                            <td>Estabelecer processos de Integração de Sistemas</td>
                         </tr>
                     </table>
+                </div>
+            </div>
+
+            <div class="flex-column">
+                <div class="box">
+                    <div class="box6">
+                        <table class="table6">
+                            <tr class="thead6">
+                                <th>Resultado esperado<img src="https://cdn-icons-png.flaticon.com/128/9797/9797853.png" alt="Icone da tabela Resultado esperado" class="table-icon"></th>
+                            </tr>
+                            <tr class="tdata6">
+                                <td>Avanço na automatização de processos</td>
+                            </tr>
+                            <tr class="tdata6">
+                                <td>Avanço da Criação do repositório de documentos</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="box7">
+                        <table class="table7">
+                            <tr class="thead7">
+                                <th>Métricas<img src="https://cdn-icons-png.flaticon.com/128/7931/7931125.png" alt="Icone da tabela Métricas" class="table-icon"></th>
+                            </tr>
+                            <tr class="tdata7">
+                                <td>% Avanço na automatização de processos</td>
+                            </tr>
+                            <tr class="tdata7">
+                                <td>% de Criação do repositório de documentos</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
